# slides

./: pyproject.toml
api/servers/server_django/server_django/: asgi.py  settings.py  urls.py  wsgi.py
web/src/: App.tsx  LandingPage.tsx
